--- a/public/partials/updateuser.html
+++ b/public/partials/updateuser.html
@@ -1,4 +1,4 @@
-<div ng-app="in2nData"  layout="column" layout-padding ng-cloak>
+<div ng-app="Activatemailer"  layout="column" layout-padding ng-cloak>
 
 
    <md-card md-theme='light-green'>
